<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jigneshpanchal.ltepeakdlthroughputestimator.BandConfigurationActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/BandConfigurationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/BandConfigInfoText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/band"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BandConfigInfoText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/fdd_or_tdd"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/BandConfigInfoText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/tx_rx_frequencies"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.38"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/AntennaConfigurationLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#220d0d0c"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_weight="2.78">

            <LinearLayout
                android:id="@+id/SectorAntennaConfigLayout"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sector"
                    android:textAlignment="center"
                    android:textColor="@color/tput"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/SectorAntennasRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/sector2Tx">

                    <RadioButton
                        android:id="@+id/sector2Tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_tx_antennas" />

                    <RadioButton
                        android:id="@+id/sector4Tx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_tx_antennas" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/DeviceAntennaConfigLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.10"
                    android:text="@string/device"
                    android:textAlignment="center"
                    android:textColor="@color/tput"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/DeviceAntennasRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/device2Rx">

                    <RadioButton
                        android:id="@+id/device2Rx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2 Rx Antennas"
                        tools:ignore="HardcodedText" />

                    <RadioButton
                        android:id="@+id/device4Rx"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_4_rx_antennas" />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="#220d0d0c"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/modulation"
                android:textAlignment="center"
                android:textColor="@color/tput"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <RadioGroup
                android:id="@+id/ModGroup"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/QAM256"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                tools:ignore="UselessParent">

                <RadioButton
                    android:id="@+id/QAM64"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_64qam" />

                <RadioButton
                    android:id="@+id/QAM256"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_256qam" />

                <RadioButton
                    android:id="@+id/QAM1024"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1024qam" />

            </RadioGroup>
            </RelativeLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/BandwidthLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#220d0d0c"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="1">

            <TextView
                android:id="@+id/BandwidthText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bandwidth_mhz"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/tput"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="1">

                <Spinner
                    android:id="@+id/BandwidthSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.91"
                    android:popupBackground="#009688"
                    android:visibility="visible" />

                <RadioGroup
                    android:id="@+id/BWContinuousRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/cont"
                    android:visibility="visible"
                    android:weightSum="1">

                    <RadioButton
                        android:id="@+id/cont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.21"
                        android:text="@string/contiguous" />

                    <RadioButton
                        android:id="@+id/non_cont"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noncontiguous" />
                </RadioGroup>

                <TextView
                    android:id="@+id/CompCarriers"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="#220d0d0c"
            android:orientation="vertical"
            android:visibility="visible"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/downlink_ratio"
                android:textAlignment="center"
                android:textColor="@color/tput"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="#220d0d0c"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="1"
                tools:ignore="NestedWeights">

                <SeekBar
                    android:id="@+id/DLRatioSeekBar"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="282dp"
                    android:layout_height="wrap_content"
                    android:max="20"
                    android:progress="20" />

                <TextView
                    android:id="@+id/DLRatio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#220d0d0c"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">

            <TextView
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/number_of_layers"
                android:textAlignment="center"
                android:textColor="@color/tput"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/NumOfLayers"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#220d0d0c"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="1">

            <TextView
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/dl_throughput"
                android:textAlignment="center"
                android:textColor="@color/tput"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/DLThroughput"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/done"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="156dp"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/done" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
